AbubakirovController.php, AminaController.php changed
